@@ -1,4 +1,5 @@
 HEAD
+    + Bugfix: dist value in anste.conf is no longer ignored
     + Using readline when running stopping during tests and treat better
       the given input
     + New anste-clean command to destroy all network and machines
